--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yound912/cheatnut",
+    "name": "yound912/chestnut",
     "description": "yound912's php framework practice",
     "license": "MIT",
     "authors": [
