--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Leon723/chestnut",
+    "name": "leon723/chestnut",
     "description": "Chestnut PHP Framework",
     "license": "MIT",
     "authors": [
