--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,18 @@
             "role": "DEVELOPER"
         }
     ],
-    "version":"0.4.0",
+    "version":"0.5.0",
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "symfony/http-foundation": "2.7.*"
     },
     "autoload": {
         "psr-4": {
             "Chestnut\\": "src/"
         },
         "files": [
-          "src/Helper.php"
+          "src/Support/Helper.php"
         ]
     }
 }
