--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
             "role": "DEVELOPER"
         }
     ],
-    "version":"0.6.2",
+    "version":"0.7.0",
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
-        "symfony/http-foundation": "2.7.*"
+        "symfony/http-foundation": "2.7.*",
+        "monolog/monolog": "^1.17",
+        "filp/whoops": "^2.0"
     },
     "autoload": {
         "psr-4": {
