--- a/composer.json
+++ b/composer.json
@@ -5,16 +5,15 @@
     "authors": [
         {
             "name": "LeonZhang",
-            "email": "33543015@qq.com",
+            "email": "zhangliyang@zhangliyang.name",
             "role": "DEVELOPER"
         }
     ],
-    "version":"0.7.0",
+    "version":"0.7.1",
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.4.0",
         "symfony/http-foundation": "2.7.*",
-        "monolog/monolog": "^1.17",
         "filp/whoops": "^2.0"
     },
     "autoload": {
