--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
             "role": "DEVELOPER"
         }
     ],
-    "version":"0.8.4",
+    "version":"0.8.5",
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.6.0",
         "symfony/http-foundation": "2.7.*",
-        "filp/whoops": "^2.0"
+        "filp/whoops": "^2.0",
+        "firebase/php-jwt": "^3.0"
     },
     "autoload": {
         "psr-4": {
